Fixed horizontal scrollbar in mobile resolution 2

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -59,10 +59,10 @@ html {
   nav,
   main,
   footer {
-    padding: 0.5rem 1.5rem;
+    padding: 0.5rem 5rem;
 
     @media (max-width: $mobile-resolution-max) {
-      padding: 0.5rem;
+      padding: 0.5rem 1.5rem;
     }
   }
 
@@ -254,7 +254,7 @@ body {
 
   .article-content,
   .tutorial-content {
-    max-width: $tablet-resolution-max;
+    max-width: 100vw;
     flex: 1;
     align-self: center;
 
